# ckb-mainnet-genesis-generator

./: .gitignore  Cargo.toml  boyu-spec.toml  final-spec.toml
configs/: base-spec.toml  config.json  previous-testnet-rewards.json
configs/previous-rounds/: round1.csv  round2-epoch.csv  round3-epoch.csv  round4.csv
src/: config.rs  consts.rs  genesis_final.rs  last_round.rs  main.rs  other.rs  previous_rounds.rs
src/data/: base-spec.toml  mod.rs  other-multisig-all.csv  other-sighash-all.csv  round1.csv  round2-epoch.csv  round2-miner.csv  round3-epoch.csv  round3-miner.csv  round5-stage1.csv  round5-stage2.csv
src/data/genesis_final/: genesis_final.csv  genesis_final.csv.asc  genesis_final.txt
