[package]
name = "ckb-mainnet-genesis-generator"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
csv = "1.1.1"
log = "0.4.6"
env_logger = "0.6"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", branch = "develop" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.23" }
ckb-chain-spec = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.23" }
ckb-resource = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.23" }